--- a/apps/web/src/app/surveys/components/priority-question.component.html
+++ b/apps/web/src/app/surveys/components/priority-question.component.html
@@ -1,10 +1,12 @@
 <div [formGroup]="form">
   <label class="q-label" [attr.for]="question.id">{{ question.text }}</label>
   <div cdkDropList (cdkDropListDropped)="drop($event)" class="priority-list">
-    <div class="priority-item" *ngFor="let it of items()" cdkDrag>
-      <span class="handle">⋮⋮</span>
-      {{ it.value }}
-    </div>
+    @for (it of items(); track it) {
+      <div class="priority-item" cdkDrag>
+        <span class="handle">⋮⋮</span>
+        {{ it.value }}
+      </div>
+    }
   </div>
 </div>
 
